# omphalOS

./: .gitattributes  CODEOWNERS  DISCLAIMER.md  README.md  pyproject.toml
config/runs/: maximal_demo.yaml
contracts/packs/: maximal.yaml
contracts/quality_rules/: dataset_boundary_rules.yaml  determinism_expectations.yaml  export_rules.yaml  performance_budgets.yaml  release_gates.yaml  security_posture_expectations.yaml  warehouse_model_rules.yaml
docs/: cli.md  overview.md  surfaces.md
docs/architecture/: system_overview.md
docs/contracts/: run_directory.md
docs/operations/: runbook.md
docs/security/: threat_model.md
docs/sql/: catalog.md
examples/synthetic/: registry.csv  trade_feed.csv
infra/k8s/: README.md
infra/terraform/: README.md  main.tf
notebooks/: 00_demo.ipynb  01_run_and_verify.ipynb  01_sql_catalog.ipynb  02_sql_and_dbt.ipynb  02_verify_compare.ipynb  03_release_bundle.ipynb  04_publishability_scan.ipynb
orchestration/: README.md
orchestration/airflow/: README.md
scripts/: attest_release.sh  backfill_driver.sh  bootstrap_env.sh  determinism_certify.sh  drift_check.sh  generate_sbom.sh  hermetic_run.sh  publishability_gate.sh  release_build.sh  release_verify.sh  run_demo.sh  run_maximal_demo.sh  sqlite_query.sh  validate_contracts.sh
spark/: README.md
spark/jobs/: ingest_synthetic.py
spark/scala/: build.sbt
spark/schemas/: trade_feed.schema.json
spark/submit/: local_submit.sh
sql/: README.md
sql/audit/: duplicate_shipments.sql  match_rate.sql  (+16 more)
ui/: index.html  package.json
warehouse/: README.md  dbt_project.yml
(+574 files in other folders)
