[project]
name = "omphalOS"
version = "0.1.0"
description = "Contracts-first deterministic analytics workbench"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Maintainers"}]
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML",
]

warehouse = [
  "dbt-core>=1.7",
  "dbt-duckdb>=1.7",
  "psycopg[binary]>=3.1",
]

orchestration = [
  "apache-airflow>=2.8",
]

spark = [
  "pyspark>=3.5",
]

[project.scripts]
omphalos = "omphalos.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
